--- a/Test Shenanigans/index.html
+++ b/Test Shenanigans/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-  <button type="button" class="btn btn-primary" id="anakin">Kill Children</button>
-  <button type="button" class="btn btn-primary" id="resurrect">Oh fuck bring them back</button>
-  <div id="hoverArea" class="blue">SRTEINROSEITNORIESTT</div>
-  <div id="injectionArea"></div>
-  <div id='exampleDiv'>
+  <div class="container px-5 py-5">
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-link">Link</button>
   </div>
 
 
