First Example Complete

--- a/DomNameGen/index.html
+++ b/DomNameGen/index.html
@@ -19,10 +19,7 @@
         </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col" id="randomNamesArea">
-
-        </div>
+      <div class="row" id="randomNamesArea">
       </div>
     </div>
     <!-- Optional JavaScript -->
