Another Review Piece

--- a/ReviewWeekGoal3/index.html
+++ b/ReviewWeekGoal3/index.html
@@ -7,21 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
-    <title>DomNameGen</title>
+
+    <title>Chess Squares</title>
   </head>
   <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <button class="btn btn-warning" id="randomBtn">RANDOM</button>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-      <div class="row" id="randomNamesArea">
-      </div>
-    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
