--- a/ReviewWeekGoal1/index.html
+++ b/ReviewWeekGoal1/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
+    <!-- <link rel="stylesheet" href="style/style.css"> -->
     <title>DomNameGen</title>
   </head>
   <body>
@@ -20,6 +20,7 @@
     </div>
     <div class="container">
       <div class="row" id="randomNamesArea">
+        
       </div>
     </div>
     <!-- Optional JavaScript -->
