--- a/ReviewWeekGoal4/index.html
+++ b/ReviewWeekGoal4/index.html
@@ -15,13 +15,13 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <input id="rowNum" type="text" name="rows" placeholder="Number of Rows">
+                <input id="rowNum" type="number" name="rows" placeholder="Number of Rows">
             </div>
             <div class="col">
-                <input id="colNum" type="text" name="columns" placeholder="Number of Columns">
+                <input id="colNum" type="number" name="columns" placeholder="Number of Columns">
             </div>
             <div class="col">
-                <input id="pTagNum" type="text" name="ptags" placeholder="Number of p tags">
+                <input id="pTagNum" type="number" name="ptags" placeholder="Number of p tags">
             </div>
             <div class="col">
                 <button id="goBtn" class="btn btn-primary">GO</button>
